# registrator_ofid

./: .env.example  .gitignore  DEPLOY.md  Makefile  README.md  deploy.sh
backend/: .env.example  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_student_profile_fields.py  0003_student_groups.py
backend/app/: main.py  seed.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  catalogs.py  notifications.py  requests.py  router.py  users.py  ws.py
backend/app/core/: config.py  db.py  logging.py  redis.py  security.py
backend/app/models/: __init__.py  audit.py  category.py  faculty.py  notification.py  request.py  role.py  user.py
backend/app/schemas/: audit.py  auth.py  catalog.py  notification.py  request.py  user.py
backend/app/services/: audit_service.py  auth_service.py  file_service.py  hemis_client.py  hemis_mock.py  notification_service.py  request_service.py
backend/tests/: test_security.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/.vite-types/: tsconfig.node.tsbuildinfo
frontend/src/: main.tsx
frontend/src/app/: i18n.ts  router.tsx  store.ts  theme.ts
frontend/src/features/admin/: AuditPage.tsx  CategoriesPage.tsx  FacultiesPage.tsx  GroupsPage.tsx  UsersPage.tsx  adminApi.ts
frontend/src/features/auth/: LoginPage.tsx  ProfilePage.tsx  RequireAuth.tsx  authApi.ts  (+2 more)
infra/: backend.Dockerfile  docker-compose.yml  nginx.conf  nginx.conf.template
(+19 files in other folders)
